--- a/app/src/main/res/layout/view_holder_activity_main.xml
+++ b/app/src/main/res/layout/view_holder_activity_main.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="@drawable/view_holder_main_card_background"
             android:id="@+id/view_holder_main_cv"
-            app:cardCornerRadius="32dp"
             app:cardElevation="@dimen/cardview_default_elevation"
-
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
@@ -28,8 +24,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/view_holder_main_card_background">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -58,17 +53,17 @@
         </android.support.v7.widget.CardView>
 
 
-
         <TextView
+            android:id="@+id/view_holder_main_servings_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/view_holder_main_servings_tv"
-            tools:text="@string/app_name"
             android:layout_marginTop="8dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            app:fontFamily="@font/noto_sans"
 
             app:layout_constraintEnd_toEndOf="@id/view_holder_main_cv"
-            app:layout_constraintTop_toBottomOf="@id/view_holder_main_cv"/>
+            app:layout_constraintTop_toBottomOf="@id/view_holder_main_cv"
+            tools:text="@string/app_name" />
 
     </android.support.constraint.ConstraintLayout>
 
