--- a/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
@@ -19,7 +19,7 @@
         <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/video_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="400dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
