Completed stepper and joined the flow

--- a/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe_detail.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -11,9 +12,10 @@
         android:layout_height="match_parent"
         android:id="@+id/recipe_detail_fm" />
 
-    <FrameLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:id="@+id/tablet_right_view_fl">
 
         <com.google.android.exoplayer2.ui.PlayerView
@@ -26,11 +28,41 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </FrameLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:id="@+id/no_video_image_iv"
+            android:visibility="gone"
+            android:src="@drawable/no_food_graphic"
+
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/description_for_step_tablet_tv"
+            android:layout_marginTop="16dp"
+            android:textColor="@android:color/black"
+            tools:text="Thsi sis here"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+
+            app:layout_constraintStart_toStartOf="@id/video_view"
+            app:layout_constraintTop_toBottomOf="@id/video_view"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+
 
 </LinearLayout>
