--- a/app/src/main/res/layout/stpper_layout.xml
+++ b/app/src/main/res/layout/stpper_layout.xml
@@ -6,6 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
         android:id="@+id/stepper_description_text_sl"/>
 
 </android.support.constraint.ConstraintLayout>
