trying to fix change recipe in tablet mode

--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".recipeDetail.RecipeDetailFragment">
 
     <!--<android.support.v7.widget.RecyclerView
@@ -23,14 +24,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Recipe"
-        android:id="@+id/change_btn"/>
+        android:src="@color/poloBlue"
+        android:id="@+id/change_btn"
+        android:layout_gravity="top|end"
+        app:layout_anchorGravity="top|end"
+        app:layout_anchor="@id/bottom_layout"/>
 
 
     <!-- Adding bottom sheet after main content -->
-    <include layout="@layout/bottom_sheet" />
+    <include layout="@layout/bottom_sheet"
+        android:id="@+id/bottom_layout"/>
 
 </android.support.design.widget.CoordinatorLayout>
