--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     app:behavior_hideable="true"
+
     app:behavior_peekHeight="56dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
@@ -25,6 +26,8 @@
             android:layout_marginBottom="16dp"
             android:layout_weight="2"
             android:text="Order Details"
+
+            android:id="@+id/recipe_heading_tv"
             android:textColor="#444"
             android:textSize="18dp"
             android:textStyle="bold" />
@@ -70,7 +73,7 @@
         android:layout_marginTop="30dp"
         android:background="#000"
         android:foreground="?attr/selectableItemBackground"
-        android:text="PROCEED PAYMENT"
+        android:text="Save to widget"
         android:textColor="#fff" />
 
 </LinearLayout>
