--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -29,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/change_btn"
+        android:src="@android:drawable/ic_media_next"
         android:layout_gravity="top|end"
         app:layout_anchorGravity="top|end"
         app:layout_anchor="@id/bottom_layout"/>
