--- a/app/src/main/res/layout/recipe_widget.xml
+++ b/app/src/main/res/layout/recipe_widget.xml
@@ -17,6 +17,30 @@
         android:text="@string/appwidget_text"
         android:textColor="#ffffff"
         android:textSize="24sp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:textStyle="bold|italic" />
+
+    <ListView
+        android:id="@+id/widget_list_lv"
+        android:layout_marginTop="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignTop="@id/appwidget_text"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/open_recipe_app_btn"
+        android:text="Open App"
+        android:textColor="@color/ghostWhite"
+        android:background="@drawable/button_border"
+        android:layout_margin="32dp"
+
+        android:layout_alignBottom="@id/widget_list_lv"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true" />
+
 
 </RelativeLayout>
