--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,6 +11,7 @@
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        app:controller_layout_id="@layout/custom_playback_control"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
