--- a/app/src/main/res/layout/view_holder_activity_main.xml
+++ b/app/src/main/res/layout/view_holder_activity_main.xml
@@ -24,7 +24,8 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:id="@+id/view_holder_main_background_cl">
 
                 <TextView
                     android:layout_width="wrap_content"
