--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,12 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         app:controller_layout_id="@layout/custom_playback_control"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,8 +40,8 @@
         android:layout_marginTop="16dp"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
 
-        app:layout_constraintBottom_toTopOf="@id/chnage_recipe_step_btn"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/video_view"
+        app:layout_constraintStart_toStartOf="@id/video_view"
         android:layout_marginBottom="64dp"
         app:layout_constraintEnd_toEndOf="parent"/>
 
