--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/main_recipe_list_rv"
             android:background="@color/ghostWhite"
+            android:layout_marginBottom="32dp"
 
             app:layout_constraintTop_toBottomOf="@id/main_view"
             app:layout_constraintStart_toStartOf="parent"
