beutification of project

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ic_detail_activity_background"
     android:id="@+id/recipe_detail_constraint_layout_phone"
     tools:context=".detail.DetailActivity">
 
@@ -34,16 +35,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/description_for_step_tv"
-        android:layout_marginTop="16dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:layout_margin="16dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
 
         app:layout_constraintTop_toBottomOf="@id/video_view"
         app:layout_constraintStart_toStartOf="@id/video_view"
-        android:layout_marginBottom="64dp"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="64dp"/>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
