--- a/app/src/main/res/layout/recipe_widget.xml
+++ b/app/src/main/res/layout/recipe_widget.xml
@@ -17,10 +17,10 @@
         android:text="@string/appwidget_text"
         android:textColor="@android:color/black"
         android:textSize="24sp"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:textStyle="bold"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentLeft="true" />
 
     <ListView
         android:id="@+id/widget_list_lv"
