--- a/app/src/main/res/layout/fragment_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/stepper_parent_layout_cl"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".recipeDetail.RecipeDetailFragment">
 
@@ -22,6 +23,8 @@
 
         <ernestoyaquello.com.verticalstepperform.VerticalStepperFormLayout
             android:id="@+id/vertical_stepper_form"
+            android:layout_marginBottom="16dp"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
