--- a/app/src/main/res/layout/stpper_layout.xml
+++ b/app/src/main/res/layout/stpper_layout.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
-        android:id="@+id/stepper_description_text_sl"/>
+        android:id="@+id/stepper_description_text_sl"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:id="@+id/recipe_image_iv"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/stepper_description_text_sl"
+        app:layout_constraintBottom_toBottomOf="@id/stepper_description_text_sl"
+        app:layout_constraintStart_toEndOf="@id/stepper_description_text_sl"/>
 
 </android.support.constraint.ConstraintLayout>
