--- a/app/src/main/res/layout/view_holder_activity_main.xml
+++ b/app/src/main/res/layout/view_holder_activity_main.xml
@@ -6,16 +6,18 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:id="@+id/view_holder_main_cv"
-            app:cardElevation="@dimen/cardview_default_elevation"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:cardElevation="0dp"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
