--- a/app/src/main/res/layout/view_holder_activity_main.xml
+++ b/app/src/main/res/layout/view_holder_activity_main.xml
@@ -1,81 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/main_card_height"
+    android:id="@+id/view_holder_main_cv"
+    android:clickable="true"
+    android:focusable="true"
+    android:layout_margin="16dp"
+    app:cardCornerRadius="6dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardElevation="16dp"
 
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:id="@+id/view_holder_main_cv"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardElevation="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="16dp"
+        android:id="@+id/view_holder_main_background_cl">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/view_holder_main_title_tv"
+            tools:text="@string/app_name"
+            android:layout_marginStart="32dp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
 
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintBottom_toTopOf="@id/view_holder_main_view"
+            android:layout_marginLeft="32dp" />
+        <View
+            android:layout_width="48dp"
+            android:layout_height="2dp"
+            android:background="@color/colorAccent"
+            android:id="@+id/view_holder_main_view"
 
+            app:layout_constraintStart_toStartOf="@id/view_holder_main_title_tv"
+            app:layout_constraintBottom_toTopOf="@id/view_holder_main_servings_tv"/>
+        <TextView
+            android:id="@+id/view_holder_main_servings_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            app:fontFamily="@font/noto_sans"
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/view_holder_main_background_cl">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/view_holder_main_title_tv"
-                    tools:text="@string/app_name"
-                    android:layout_marginStart="32dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
-
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/view_holder_main_view"
-                    android:layout_marginLeft="32dp" />
-
-                <View
-                    android:layout_width="48dp"
-                    android:layout_height="2dp"
-                    android:background="@color/colorAccent"
-                    android:id="@+id/view_holder_main_view"
-
-                    app:layout_constraintStart_toStartOf="@id/view_holder_main_title_tv"
-                    app:layout_constraintBottom_toTopOf="@id/view_holder_main_servings_tv"/>
-
-
-
-
-                <TextView
-                    android:id="@+id/view_holder_main_servings_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                    app:fontFamily="@font/noto_sans"
-
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@id/view_holder_main_title_tv"
-                    tools:text="@string/app_name" />
-
-            </android.support.constraint.ConstraintLayout>
-
-
-
-
-
-        </android.support.v7.widget.CardView>
-
-
-
-
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/view_holder_main_title_tv"
+            tools:text="@string/app_name" />
     </android.support.constraint.ConstraintLayout>
-
-</layout>
+</android.support.v7.widget.CardView>
